<resources>
    <string name="app_name">Ejercicio2Semana2</string>
    <string name="txtnombre">Nombre Completo</string>
    <string name="txtNombre">Nombre Completo</string>
    <string name="txtNota">Nota</string>
    <string name="btnAgregarNota">Agregar Nota</string>
    <string name="btnAgregarNota2">Agregar Nota</string>
    <string name="btnProcesar">"Procesar "</string>
    <string name="btnAgregar">Agregar Nota</string>
    <string name="btnProcesarInfo">Procesa</string>
    <string name="txthoras_laboradas">txthoras_laboradas</string>
    <string name="txtdui">txtdui</string>
    <string name="txtnombre2">txtnombre</string>
    <string name="txtpromedio">txtPromedio</string>
    <string name="txtpromedio2">promedio</string>
    <string name="btnSalir">btnSalir</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnSalir2">Salir</string>
</resources>