<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showInfo">

    <LinearLayout

        android:layout_width="400dp"
        android:layout_height="600dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txtnombre2"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txtNotas"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txtNota"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txtPromedio"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txtpromedio2"
            android:textSize="30dp" />


    </LinearLayout>


<LinearLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent">


<Button
    android:id="@+id/btnRegresar"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="4dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/btnRegresar"


    />

<Button
    android:id="@+id/btnSalir"
    android:layout_width="150dp"

    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="4dp"
    android:layout_weight="1"
    android:text="@string/btnSalir2"


    />

</LinearLayout>
</android.support.constraint.ConstraintLayout>