<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="fill_parent"
            android:text="Ingreso de notas"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp">

        </TextView>

        <EditText
            android:layout_width="fill_parent"
            android:layout_marginTop="50dp"
           android:id="@+id/txtNombre"
            android:gravity="center"
            android:hint="@string/txtNombre"
            android:textSize="25dp"
            android:layout_height="50dp"
            tools:ignore="HardcodedText,LabelFor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNota"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="@string/txtNota"
                 android:inputType="numberDecimal"
                android:textSize="25dp"></EditText>

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
android:layout_marginLeft="90dp"
                android:text="@string/btnAgregar" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnProcesar"
                android:layout_width="150dp"
                android:layout_height="50dp"


                android:text="@string/btnProcesar" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:text=""
            android:id="@+id/txtRespuesta"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"></TextView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>

